// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should match snapshots for each variant with icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 0,
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
  testID="title-container"
>
  <Text />
  <Text
    style={
      {
        "color": "#000C49",
        "fontSize": 24,
        "fontWeight": "bold",
      }
    }
  >
    Lorem ipsum dolor sit amet
  </Text>
</View>
`;

exports[`Title should match snapshots for each variant with icon 2`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 0,
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
  testID="title-container"
>
  <Text />
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 16,
        "fontWeight": "bold",
      }
    }
  >
    Lorem ipsum dolor sit amet
  </Text>
</View>
`;

exports[`Title should match snapshots for each variant with icon 3`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 0,
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
  testID="title-container"
>
  <Text />
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    Lorem ipsum dolor sit amet
  </Text>
</View>
`;

exports[`Title should match snapshots for each variant without icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 0,
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
  testID="title-container"
>
  <Text
    style={
      {
        "color": "#000C49",
        "fontSize": 24,
        "fontWeight": "bold",
      }
    }
  >
    Lorem ipsum dolor sit amet
  </Text>
</View>
`;

exports[`Title should match snapshots for each variant without icon 2`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 0,
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
  testID="title-container"
>
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 16,
        "fontWeight": "bold",
      }
    }
  >
    Lorem ipsum dolor sit amet
  </Text>
</View>
`;

exports[`Title should match snapshots for each variant without icon 3`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 0,
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
  testID="title-container"
>
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    Lorem ipsum dolor sit amet
  </Text>
</View>
`;
